python/tests/test_envoy_v3/globalcircuitbreakingtest/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "DevPortal": null,
        "Host": [
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "Host",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"Host\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"globalcircuitbreakingtest\",\"scope\":\"AmbassadorTest\"},\"name\":\"cleartext-host-globalcircuitbreakingtest\",\"namespace\":\"default\"},\"spec\":{\"acmeProvider\":{\"authority\":\"none\"},\"ambassador_id\":[\"globalcircuitbreakingtest\"],\"hostname\":\"*\",\"requestPolicy\":{\"insecure\ [...]
                    },
                    "creationTimestamp": "2020-12-23T17:01:25Z",
                    "generation": 2,
                    "labels": {
                        "kat-ambassador-id": "globalcircuitbreakingtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "cleartext-host-globalcircuitbreakingtest",
                    "namespace": "default",
                    "resourceVersion": "20043",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/hosts/cleartext-host-globalcircuitbreakingtest",
                    "uid": "0425ff9e-93b3-4811-983e-b352b346c972"
                },
                "spec": {
                    "acmeProvider": {
                        "authority": "none"
                    },
                    "ambassador_id": [
                        "globalcircuitbreakingtest"
                    ],
                    "hostname": "*",
                    "requestPolicy": {
                        "insecure": {
                            "action": "Route"
                        }
                    },
                    "selector": {
                        "matchLabels": {
                            "hostname": "globalcircuitbreakingtest"
                        }
                    },
                    "tlsSecret": {}
                },
                "status": {
                    "state": "Ready",
                    "tlsCertificateSource": "None"
                }
            }
        ],
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": [
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdmanualcontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdmanualcontext-manual-host-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdmanualcontext\"],\"hosts\":[\"hostcrdmanualcontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\", [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:40Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdmanualcontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdmanualcontext-manual-host-context",
                    "namespace": "default",
                    "resourceVersion": "2949",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/tlscontexts/hostcrdmanualcontext-manual-host-context",
                    "uid": "fa19bc5d-236f-46f9-b1f1-0c10c8b2ed3f"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdmanualcontext"
                    ],
                    "hosts": [
                        "hostcrdmanualcontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "hostcrdmanualcontext-manual-secret"
                }
            },
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdseparatetlscontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdseparatetlscontext-separate-tls-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdseparatetlscontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\",\"secret\":\"hostcrds [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:41Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdseparatetlscontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdseparatetlscontext-separate-tls-context",
                    "namespace": "default",
                    "resourceVersion": "2995",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/tlscontexts/hostcrdseparatetlscontext-separate-tls-context",
                    "uid": "e10bdb3b-8605-4f27-8943-5767c5e99f8b"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdseparatetlscontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "hostcrdseparatetlscontext-secret"
                }
            },
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tlsinheritfrommodule\",\"scope\":\"AmbassadorTest\"},\"name\":\"tlsinheritfrommodule\",\"namespace\":\"default\"},\"spec\":{\"alpn_protocols\":\"h2,http/1.1\",\"ambassador_id\":[\"tlsinheritfrommodule\"],\"hosts\":[\"a.domain.com\"],\"secret\":\"tlsinheritfrommodule\"}}\n"
                    },
                    "creationTimestamp": "2020-12-23T17:01:08Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "tlsinheritfrommodule",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tlsinheritfrommodule",
                    "namespace": "default",
                    "resourceVersion": "6438",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/tlscontexts/tlsinheritfrommodule",
                    "uid": "d4f4da8f-82b8-4c31-b484-3effd73b669f"
                },
                "spec": {
                    "alpn_protocols": "h2,http/1.1",
                    "ambassador_id": [
                        "tlsinheritfrommodule"
                    ],
                    "hosts": [
                        "a.domain.com"
                    ],
                    "secret": "tlsinheritfrommodule"
                }
            }
        ],
        "TracingService": null,
        "ingresses": null,
        "secret": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: Mapping\nname: globalcircuitbreakingtest-http-pr\nprefix: /GlobalCircuitBreakingTest-pr/\nservice: globalcircuitbreakingtest-http\ncircuit_breakers:\n- priority: default\n  max_pending_requests: 1024\n  max_connections: 1024\nambassador_id: globalcircuitbreakingtest\n---\napiVersion: ambassador/v1\nkind: Mapping\nname: globalcircuitbreakingtest-http-normal\nprefix: /GlobalCircuitBreakingTest-normal/\nservic [...]
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: Mapping\\nname: globalcircuitbreakingtest-http-pr\\nprefix: /GlobalCircuitBreakingTest-pr/\\nservice: globalcircuitbreakingtest-http\\ncircuit_breakers:\\n- priority: default\\n  max_pending_requests: 1024\\n  max_connections: 1024\\nambassador_id: globalcircuitbreakingtest\\n- [...]
                    },
                    "creationTimestamp": "2020-12-23T20:40:32Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "globalcircuitbreakingtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "globalcircuitbreakingtest",
                    "namespace": "default",
                    "resourceVersion": "300099",
                    "selfLink": "/api/v1/namespaces/default/services/globalcircuitbreakingtest",
                    "uid": "b581fa4b-af00-4ddb-9706-fe50bf631009"
                },
                "spec": {
                    "clusterIP": "10.43.86.234",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30321,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 30900,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "globalcircuitbreakingtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"globalcircuitbreakingtest\",\"scope\":\"AmbassadorTest\",\"service\":\"globalcircuitbreakingtest-admin\"},\"name\":\"globalcircuitbreakingtest-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"globalcircuitbreakingtest-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"g [...]
                    },
                    "creationTimestamp": "2020-12-23T20:40:32Z",
                    "labels": {
                        "kat-ambassador-id": "globalcircuitbreakingtest",
                        "scope": "AmbassadorTest",
                        "service": "globalcircuitbreakingtest-admin"
                    },
                    "name": "globalcircuitbreakingtest-admin",
                    "namespace": "default",
                    "resourceVersion": "300110",
                    "selfLink": "/api/v1/namespaces/default/services/globalcircuitbreakingtest-admin",
                    "uid": "f9d88a4a-2253-47fe-9acf-107c0f7f3213"
                },
                "spec": {
                    "clusterIP": "10.43.219.241",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "globalcircuitbreakingtest-admin",
                            "nodePort": 30355,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "globalcircuitbreakingtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"globalcircuitbreakingtest\",\"scope\":\"AmbassadorTest\"},\"name\":\"globalcircuitbreakingtest-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8163},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8526}],\"selector\ [...]
                    },
                    "creationTimestamp": "2020-12-23T20:40:32Z",
                    "labels": {
                        "kat-ambassador-id": "globalcircuitbreakingtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "globalcircuitbreakingtest-http",
                    "namespace": "default",
                    "resourceVersion": "300137",
                    "selfLink": "/api/v1/namespaces/default/services/globalcircuitbreakingtest-http",
                    "uid": "6993a0d5-138f-404b-b73a-e82fda78650c"
                },
                "spec": {
                    "clusterIP": "10.43.228.38",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8163
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8526
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
